update docs for "GET /v1/user/:uid" endpoint
