# docs/swagger.json
@@ -1424,7 +1424,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/userdto.Full"
+                            "$ref": "#/definitions/userdto.Public"
                         }
                     },
                     "400": {
@@ -2613,35 +2613,6 @@
                 "user-agent": {
                     "type": "string",
                     "example": "Mozilla/5.0 (X11; Linux x86_64; rv:138.0) Gecko/20100101 Firefox/138.0"
-                }
-            }
-        },
-        "userdto.Full": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "login": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "roles": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "version": {
-                    "type": "integer"
                 }
             }
         },
